feat: make codeblocks ltr when the direction is on auto

--- a/qa-theme/SnowFlat/qa-styles-rtl.css
+++ b/qa-theme/SnowFlat/qa-styles-rtl.css
@@ -457,3 +457,11 @@ h1 {
 	direction: ltr;
 	display: inline-block;
 }
+
+[dir="auto"] code {
+    float: left;
+}
+
+[dir="rtl"] code {
+    float: left;
+}
