fix ltr problem of codeblocks

--- a/qa-theme/Candy/qa-styles.css
+++ b/qa-theme/Candy/qa-styles.css
@@ -520,4 +520,5 @@ h2 {font-size:22px; color:#c659ab; padding-top:12px; clear:both;}
 
 [dir="auto"] code {
     float: left;
+    direction: ltr;
 }
